remove false noop breaking branches

BUG: 328007
FIXED-IN: 4.11.4